fix(gallery): button position on mobile

--- a/web/src/pages/gallery.module.css
+++ b/web/src/pages/gallery.module.css
@@ -60,7 +60,7 @@
 .iconWrapper {
   position: fixed;
   right: 0em;
-  top: 78.3px;
+  top: 89.3px;
   display: flex;
   margin: -0em 0.745em;
   z-index: 10;
